updated SCSS of StarRank.scss due to layout issues

--- a/src/scss/MiscellaneousStyle/StarRank.scss
+++ b/src/scss/MiscellaneousStyle/StarRank.scss
@@ -1,3 +1,10 @@
+.StarRating {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .starIcon {
   width: 24px;
   height: 24px;
